<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium"
    android:background="@color/background"
    tools:context=".RideSearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_ride"
        android:textSize="@dimen/text_size_display"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:textColor="@color/primary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/destinationFilterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter_by_destination"
            android:padding="@dimen/spacing_medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeFilterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter_by_time"
            android:padding="@dimen/spacing_medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/search"
        android:layout_marginBottom="@dimen/spacing_large"
        style="@style/ButtonStyle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/availableRidesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_ride" />

</LinearLayout>